repair to screen overflow and carousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Shadows+Into+Light');
+
 /*-------------------------------main-----------*/
+
 body {
     padding-top: 75px;
-    padding-bottom: 200px;
     font-family: 'Montserrat', sans-serif;
     font-size: medium;
     background-color: #343a40;
     color: #fafafa;
-    overflow: auto;
-    margin: 0;
-    height: 100%;
-    min-height: 100%;
-  
+
     
 }
 
@@ -27,54 +25,40 @@ body {
     text-align: center;
 }
 
-/*-----.navbar.mycoolclass 
-    dlaskfdsfklds------*/
-
 /*-------------------------------Header-----------*/
 
+.carousel-caption {
 
-
-.carousel-item {
-    
-    height: 100%;
-    max-width: 100%;
-    min-height: 500px;
-    background: no-repeat center center scroll;
-    background-size: cover;
-    text-align: center;
-    
-    }
-    
-    .btn-secondary {
-    font-family: 'Montserrat', sans-serif; 
-    background-color: #000000;
-    border-style: none;
-    opacity: 0.7;
-    margin-top: 250px;
-    
-
-    }
-    .btn-secondary:active {
-        background-color: #f75c03;
-    }
-    .btn-secondary:hover {  
-background-color: #f75c03;
+    font-size: xx-large;
+    color: #f7b801;
+    right: 0%;
+    text-align: right;
+    max-width: 1000px;
+    left: auto;
+    margin-right: 20px;
 }
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev{
+display:block;
+}
+
 
 /*-------------------------------about-----------*/
 
 .aboutgella {
-    height: 355px;
     padding-left: 0;
     padding-right: 0;
-    margin: 0;
+    margin-right: 0;
+    margin-left: 0;
     width: 100%;
+    
 
 }
 
 .aboutpic {
-    height: 50vh;
-    width: 100vh;
+    height: 325px;
     background-image: url('../images/gellafest.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -83,35 +67,39 @@ background-color: #f75c03;
 
 }
 
-.aboutstuff {
-    
-    height: 50vh;
-    width: 100vh;
+.gellabio {
+    padding-top: 25px;
+    height: 325px;
     background-color: #f75c03;
     text-align: left;
-    
+    padding-left: 25px;
 
 }
 
-.audiostuff {
-   
-    height: 50vh;
-    width: 100vh;
+.gellaaudio {
+    padding-top: 25px;
+    height: 325px;
     background-color: #f75c03;
     text-align: left;
-   
+    padding-left: 25px;
 
 }
+
+
 
 
 /*-------------------------------Tour-----------*/
 
+.tourPic {
+    padding-left: 0;
+    padding-right:0;
+}
+
 .livehead {
     color: #ffffff;
-    padding-top:100px;
     padding-left: 15px;
     text-align: center;
-    
+    padding-top: 150px;
 }
 
 .livehead2 {
@@ -120,30 +108,31 @@ background-color: #f75c03;
     text-align: center;
 }
 
-.contactpic {
+.gellaLivePic {
     height: 325px;
     width: 100%;
     background-image: url('../images/gellaDJ.jpg');
-    background-position: center;
+   
     background-repeat: no-repeat;
     background-size: cover;
 
 }
-
-.table-dark{
-    float:none;
-    overflow:auto;
-    height:100%;
-    position:relative;
-    padding: 0;
-} 
-
 /*-------------------------------Contact-----------*/
 
 .btn-primary {
     background-color: #000000;
     width: 100%;
     border-color: #000000;
+}
+
+.btn-primary:hover {
+    background-color: #f75c03;
+    border-style: none;
+}
+
+.btn-primary:action {
+    background-color: #f75c03;
+    border-style: none;
 }
 
 .form-control {
@@ -173,8 +162,7 @@ background-color: #f75c03;
 /*-------------------------------Footer-----------*/
 
 footer {
-    position: absolute; 
-    width: 100%; 
+    position: absolute;
     background-color: #343a40;
     margin: 0;
     padding-top: 10px;
@@ -232,14 +220,4 @@ footer p {
 .copyright {
     font-size: small;
     margin-top: -50px;
-}
-
-.btn-primary:hover{
-    background-color: #f75c03;
-    border-style: none;
-}
-
-.btn-primary:active{
-    background-color: #f75c03;
-    border-style: none;
 }
